--- a/app/index.html
+++ b/app/index.html
@@ -9,4 +9,5 @@
 	</body>
 	<script src="bundle.js"></script>
 	<link rel="stylesheet" href="styles/styles.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
 </html>
