--- a/app/index.html
+++ b/app/index.html
@@ -10,4 +10,6 @@
 	<script src="bundle.js"></script>
 	<link rel="stylesheet" href="styles/styles.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
+	<script src="https://js.stripe.com/v2/"></script>
+	<script>Stripe.setPublishableKey('pk_test_fkQKoVu2v1k17463CJIJvFU8');</script>>
 </html>
